--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@t3-oss/env-nextjs": "^0.3.1",
+    "framer-motion": "^10.16.2",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
