--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@t3-oss/env-nextjs": "^0.3.1",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "@tanstack/react-query": "^4.29.25",
+    "@trpc/client": "^10.34.0",
+    "@trpc/next": "^10.34.0",
+    "@trpc/react-query": "^10.34.0",
+    "@trpc/server": "^10.34.0"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
@@ -30,6 +36,7 @@
     "eslint-config-next": "^13.4.2",
     "postcss": "^8.4.27",
     "prettier": "^2.8.8",
+    "prisma": "^5.1.1",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
