--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.13",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
     "prisma": "^5.4.1",
